[package]
name = "csv-grep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.0"
fakeit = "1.1"
itertools = "0.12"
unicode-segmentation = "1.10"
unicode-width = "0.1"
strum = { version = "0.26", features = ["derive"] }
color-eyre = "0.6.2"
csv = "1.3.0"