[package]
name = "csv-grep"
version = "0.1.0"
edition = "2021"
authors = ["Ezeabasili Anthony <ezeabasilianthony@gmail.com>"]
description = "A library for quick glance at csv data right from the terminal"
documentation = ""
keywords = ["tui", "terminal", "csv", "analysis", "data"]
repository = ""
readme = "README.md"
license = "MIT"
exclude = [
  "assets/*",
  ".github",
  "Makefile.toml",
  "CONTRIBUTING.md",
  "*.log",
  "tags",
]
autoexamples = true
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.0"
itertools = "0.12"
unicode-segmentation = "1.10"
unicode-width = "0.1"
strum = { version = "0.26", features = ["derive"] }
color-eyre = "0.6.2"
csv = "1.3.0"